Test Data/TSP/TSP-MELA-4/outputs/tsp-scso/2025-07-18_15-22-58/problem_iter2_stdout_2.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/tsp/main.py", line 11, in <module>
    import gpt
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\tsp\gpt.py", line 9
    return alpha * np.exp(-normalized_dist/5) * ((1/(distance_matrix + epsilon))**beta
                                                ^
SyntaxError: '(' was never closed
[0m